# zkp-poc

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs
