[package]
name = "zkp-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
proptest = "1.6"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
