[package]
name = "zkp-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
num-bigint = "0.4"
prost = "0.14"
rand = "0.10"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1.23", features = ["fast-rng", "macro-diagnostics", "v4"] }

[dev-dependencies]
proptest = "1.11"

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
